--- a/src/nav/Nav.css
+++ b/src/nav/Nav.css
@@ -34,13 +34,19 @@
 }
 
 
+.lang-menu h1 {
+    font-size: 15px;
+    font-weight: 600;
+    margin-top: -30px;
+    text-align: center;
+}
+
+
 .lang-menu {
-    position: absolute;
-    top: 55px;
-    width: 100%;
+    width: 99px;
+    height: 131px;
     background: white;
     border-radius: 14px;
-    padding: 10px;
     margin-top: 20px;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
 
@@ -53,4 +59,40 @@
 .lang-box:hover .lang-menu {
     visibility: visible;
     transform: translateY(0);
+}
+
+
+.nav-menu {
+    display: flex;
+    gap: 23px;
+}
+
+
+.search {
+    color: #424242;
+    font-size: 18px;
+    font-weight: 700;
+    margin-top: 5px;
+}
+
+
+.nav-menu button {
+    width: 118px;
+    height: 46px;
+    background-color: white;
+    color: #FFB800;
+    border: 0px;
+    border-radius: 8px;
+    box-shadow: 0px 20px 40px 0px #FFAE004A;
+    box-shadow: 0px 5px 10px 0px #FFAE0042;
+    font-size: 18px;
+    font-weight: 700;
+    margin-top: 18px;
+    transition: 0.3s;
+    margin-left: 20px;
+}
+
+
+.nav-menu button:hover {
+    transform: scale(1.1);
 }
