--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -7,5 +7,104 @@
 
 .header {
     background-color: #FFB800;
-    height: 620px;
+    height: 657px;
+    padding-top: 157px;
+    padding-left: 80px;
+    display: flex;
+}
+
+
+.header h1 {
+    color: white;
+    font-size: 88px;
+    font-weight: 700;
+}
+
+
+.header p {
+    font-size: 22px;
+    font-weight: 400;
+    color: #504F4F;
+    margin-top: 15px;
+}
+
+
+.rasmosh {
+    margin-left: -130px;
+    height: 450px;
+    margin-top: 50px;
+}
+
+
+.register-part {
+    width: 856px;
+    height: 194px;
+    border-radius: 16px;
+    box-shadow: 0px 20px 40px 0px #FFAE004A;
+    box-shadow: 0px 5px 10px 0px #FFAE0042;
+    background-color: #FFFFFF;
+    padding-top: 24px;
+    padding-left: 24px;
+    margin-top: 32px;
+}
+
+
+.register-btns button {
+    width: 148px;
+    height: 38px;
+    background-color: #FFFFFF;
+    border-radius: 8px;
+    border: 0px;
+    color: #757575;
+    transition: 0.3s;
+}
+
+
+.register-btns button:hover {
+    background-color: #F172281A;
+    color: #F17228;
+    transform: scale(1.1);
+}
+
+
+.register-btns {
+    gap: 28px;
+    display: flex;
+}
+
+
+.inputs {
+    margin-top: 48px;
+    display: flex;
+    gap: 16px;
+}
+
+
+.inputs input {
+    width: 593px;
+    height: 49px;
+    background-color: #F5F5F5;
+    color: #9E9E9E;
+    padding-left: 26px;
+    border-radius: 8px;
+    border: 0px;
+    margin-top: 6px;
+}
+
+
+.inputs button {
+    width: 199px;
+    height: 60px;
+    border: 0px;
+    border-radius: 8px;
+    background: linear-gradient(95.71deg, #FF7A7A -39.64%, #F75900 135.31%);
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+    transition: 0.2s;
+}
+
+
+.inputs button:hover {
+    transform: scale(1.05);
 }
